[package]
name = "rust_nodejs"
version = "0.1.0"
authors = ["Daniele Esposti <daniele.esposti@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "rust_nodejs"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.5.3"

[dependencies]
neon = "0.5.3"
serde_json = "1.0"
