[package]
name = "rust_nodejs"
version = "0.1.0"
authors = ["Daniele Esposti <daniele.esposti@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "rust_nodejs"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.10.0"

[dependencies]
neon = "0.10.1"
serde_json = "1.0"
